--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "respect/validation": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "4.8.28"
     },
     "autoload": {
         "psr-4": {
